# backend

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  API_SPECIFICATION.json  BULK_CONVERSION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  ENDPOINT_DETALLES_VENTA.md  FIX_BULK_CONVERSION_QUANTITY.md  FIX_SQL_AMBIGUOUS_COLUMNS.md  HTTP_EXAMPLES.md  IMPLEMENTATION_COMPLETED_LOT_DETAILS.md  README.md  add_active_column.py  app.py  check_status.py  database.py  generate_schemas.py  main.py  manage.py  mapo_database_backup.sql  migrate_auth_fix.py  migrate_inventory_sales.py  migrate_product_presentation.py  migration_product_presentation.sql  models_db.py  pyproject.toml  pyvenv.cfg  requirements.txt  run.bat  run.ps1  scripts  seed_roles.py  start.sh  start_dev.py  test.py  test_null_image.py  test_permissions.py  (+4 more)
config/: permissions.py
constants/: role.py
deployment/: DEPLOYMENT_GUIDE.md  Dockerfile  app-spec.yaml  docker-compose.prod.yml  docker-compose.yml  init.sql  setup-droplet.sh
docs/: BULK_CONVERSION_DIAGRAM.md  BULK_CONVERSION_GUIDE.md  CI_CD_GUIDE.md  DEPLOY_GUIDE.md  EXECUTIVE_SUMMARY.md  FIX_AUTH_ERROR_401.md  FIX_SALES_ITEMS.md  FRONTEND_CODE_EXAMPLES.md  FRONTEND_DEBUG_SCRIPT.html  FRONTEND_DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION_API.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_QUICK_SALE_GUIDE.md  FRONTEND_QUICK_START.md  FRONTEND_TYPESCRIPT_ARCHITECTURE.md  FRONTEND_USE_CASES.md  LOT_DETAILS_ENDPOINT_GUIDE.md  LOT_DETAILS_QUICK_REFERENCE.md  LOT_DETAILS_SUMMARY.md  MIXED_SALES_GUIDE.md  PERSONS_SALES_INTEGRATION.md  PRODUCTION_READY.md  PRODUCTS_IMAGE_URL_DOCS.md  README.md  README_FRONTEND_DOCS.md  ROLE_SWITCHING_GUIDE.md  SALES_HISTORY_GUIDE.md  SALES_SYSTEM_COMPLETE_GUIDE.md  (+4 more)
(+53 files in other folders)
